--- a/Library2/src/main/resources/static/index.html
+++ b/Library2/src/main/resources/static/index.html
@@ -28,12 +28,17 @@
         <div class="mb-4">
             <input type="password" id="password" class="form-control p-3" placeholder="Şifre" required>
         </div>
+
         <button type="submit" class="btn btn-primary">GİRİŞ YAP</button>
+
+        <div class="text-center mt-3">
+            <a href="#" class="text-decoration-none small text-muted" onclick="sifremiUnuttum()">Şifremi Unuttum?</a>
+        </div>
+        <div class="text-center mt-3 border-top pt-3">
+            <span class="text-muted">Hesabın yok mu?</span>
+            <a href="register.html" class="text-decoration-none fw-bold ms-1">Hemen Kayıt Ol</a>
+        </div>
     </form>
-    <div class="mt-3 text-center text-muted small">
-        Admin: admin@mail.com / 1234<br>
-        Üye: ahmet@mail.com / 1234
-    </div>
 </div>
 
 <script>
@@ -41,25 +46,51 @@
         const email = document.getElementById('email').value;
         const password = document.getElementById('password').value;
 
-        fetch('/api/members')
-            .then(res => res.json())
-            .then(users => {
-                const user = users.find(u => u.email === email && u.password === password);
-                if (user) {
+        fetch('/api/members/login', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ email: email, password: password })
+        })
+            .then(async res => {
+                if (res.ok) {
+                    const user = await res.json();
                     localStorage.setItem('currentUser', JSON.stringify(user));
+                    console.log("Giriş Başarılı! Token: " + user.token);
+
                     if (user.role === 'ADMIN') {
                         window.location.href = 'admin_panel.html';
                     } else {
                         window.location.href = 'member_panel.html';
                     }
                 } else {
-                    alert("Hatalı Email veya Şifre!");
+                    const msg = await res.text();
+                    alert(msg);
                 }
             })
             .catch(err => {
                 console.error(err);
-                alert("Sunucuya bağlanılamadı! Backend çalışıyor mu?");
+                alert("Sunucu hatası!");
             });
+    }
+
+    function sifremiUnuttum() {
+        let email = prompt("Lütfen kayıtlı e-posta adresinizi girin:");
+
+        if (email) {
+            fetch('/api/members/forgot-password', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ email: email })
+            })
+                .then(async res => {
+                    const msg = await res.text();
+                    alert(msg);
+                })
+                .catch(err => {
+                    console.error(err);
+                    alert("Bir hata oluştu.");
+                });
+        }
     }
 </script>
 </body>
