--- a/Library2/src/main/resources/static/member_panel.html
+++ b/Library2/src/main/resources/static/member_panel.html
@@ -107,7 +107,6 @@
 
     function logout() {
         if(currentUser && currentUser.id) {
-            // Backend'e "Bu kullanıcının token'ını sil" diyoruz
             fetch('/api/members/logout/' + currentUser.id, { method: 'POST' })
                 .finally(() => {
                     localStorage.removeItem('currentUser');
@@ -173,42 +172,34 @@
         }
     }
 
-    // TABLOYU DOLDURAN FONKSİYON
     function loadMyLoans() {
-        // Kullanıcı giriş yapmamışsa dur
         if (!currentUser) return;
 
         fetch('/api/loans/member/' + currentUser.id)
             .then(response => response.json())
             .then(loans => {
                 const tbody = document.getElementById('myLoansTable');
-                tbody.innerHTML = ''; // Tabloyu temizle
+                tbody.innerHTML = '';
 
                 loans.forEach(loan => {
-                    // 1. Durum ve Ödeme Butonu Ayarı
                     let statusHtml = '';
                     let payButtonHtml = '';
 
                     if (loan.fineAmount > 0) {
-                        // Ceza varsa kırmızı yazı ve ÖDE butonu
                         statusHtml = `<span class="badge bg-danger">Ceza: ${loan.fineAmount} TL</span>`;
                         payButtonHtml = `<button class="btn btn-success btn-sm ms-2" onclick="payFine(${loan.id})">
                                             <i class="fas fa-credit-card"></i> ÖDE
                                          </button>`;
                     } else {
-                        // Ceza yoksa yeşil yazı
                         statusHtml = `<span class="badge bg-success">Zamanı Var</span>`;
                     }
 
-                    // 2. İade Et Butonu (Her zaman görünür)
                     let returnButtonHtml = `<button class="btn btn-warning btn-sm text-white" onclick="returnBook(${loan.id})">
                                                 <i class="fas fa-undo"></i> İade Et
                                             </button>`;
 
-                    // 3. Kitap Resmi (Yoksa varsayılan resim)
                     const imgUrl = loan.book.imageUrl || 'https://via.placeholder.com/40x60';
 
-                    // 4. Tabloya Satırı Ekle
                     tbody.innerHTML += `
                         <tr>
                             <td>
@@ -228,7 +219,6 @@
             .catch(err => console.error("Hata:", err));
     }
 
-    // İADE ETME İŞLEMİ
     function returnBook(loanId) {
         if(confirm("Kitabı iade etmek istiyor musunuz?")) {
             fetch('/api/loans/return/' + loanId, { method: 'POST' })
@@ -240,15 +230,13 @@
         }
     }
 
-    // CEZA ÖDEME İŞLEMİ
     function payFine(loanId) {
-        // "544 TL" yazısını sildik, yerine genel ve doğru ifadeyi koyduk:
         if(confirm("Güncel ceza tutarını ödemek ve kitabı iade etmek istiyor musunuz?")) {
             fetch('/api/loans/pay-fine/' + loanId, { method: 'PUT' })
                 .then(res => res.text())
                 .then(msg => {
-                    alert(msg); // Backend'den gelen "Ödeme alındı..." mesajını gösterir
-                    loadMyLoans(); // Tabloyu yeniler
+                    alert(msg);
+                    loadMyLoans();
                 })
                 .catch(error => {
                     console.error('Hata:', error);
